tests/integration/snapshots/integration__conformance__i_string_incomplete_surrogates_escape_valid.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\uD800\uD800\n"]
stdout ---
["\uD800\uD800\n"]

stderr ---
