tests/integration/snapshots/integration__conformance__i_string_incomplete_surrogates_escape_valid.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uD800\uD800\n"]
stdout --- 
["\uD800\uD800\n"]
stderr --- 
<empty>
