tests/integration/snapshots/integration__conformance__i_string_invalid_surrogate.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\ud800abc"]
stdout ---
["\ud800abc"]

stderr ---
