tests/integration/snapshots/integration__conformance__i_string_invalid_surrogate.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\ud800abc"]
stdout ---
[
  "\ud800abc"
]

stderr ---
