tests/integration/snapshots/integration__conformance__i_string_invalid_utf-8.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
raw bytes: [91, 34, 255, 34, 93]
stdout ---

stderr ---
error: source did not contain valid utf8
 --> stdin
  |
