tests/integration/snapshots/integration__conformance__i_string_inverted_surrogates_u+1d11e.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\uDd1e\uD834"]
stdout ---
["\uDd1e\uD834"]

stderr ---
