tests/integration/snapshots/integration__conformance__i_string_inverted_surrogates_u+1d11e.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\uDd1e\uD834"]
stdout ---
["\uDd1e\uD834"]

stderr ---
